# BGI_cell_seg

./: .gitignore  CHANGES.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
CDCL/: dataset_my.py  train.py  utils.py
CDCL/model/: ema_model.py  model.py  segnet.py
cellbin/: __init__.py
cellbin/contrib/: GMM_correct.py  __init__.py  alignment.py  alignment2he.py  fast_correct.py  five_points2template.py  fov_aligner.py  global_location.py  template_reference.py  template_reference_v2.py  tr_scale_search.py  vision_track.py
cellbin/dnn/: onnx_net.py
cellbin/dnn/clarity/: evaler.py
cellbin/dnn/cseg/: cell_trace.py  detector.py  predict.py  processing.py
cellbin/dnn/weights/: __init__.py
cellbin/image/: __init__.py  augmentation.py  morphology.py  transform.py  wsi_split.py  wsi_stitch.py
cellbin/modules/: __init__.py  calibrate.py  cell_labelling.py  cell_segmentation.py  image_qc.py  registration.py  stitching.py  tissue_segmentation.py
cellbin/modules/chip_file/: SN_fov_extend.txt  (+2 more)
cellbin/utils/: clog.py  json_config.py
docs/: manage.md  version.md  weights.md
test/contribute/: test_alignment.py  test_vision_track.py
test/image/: test_augmentation.py  test_transform.py
test/moudule/: test_registration.py
tutorials/: run_cell_correct.py  run_cell_seg.py  run_clarity_qc.py  run_global_template_qc.py  run_mif_calibrate.py  run_regist.py  run_stitch.py  run_stitch_qc.py  run_tissue_seg.py  run_track_line_qc.py  run_track_pt_qc.py
tutorials/deprecated/: pipeline.py  pipeline_config.json  qc.py  qc_config.json
(+96 files in other folders)
