# https://github.com/python-poetry/poetry
[tool.poetry]
name = "cell bin"
version = "0.0.1"
description = "Help you build customized STOmics Analysis Workflow."

license = "MIT"

authors = [
    "cenweixuan@genomics.cn",
    "dengzhonghan@genomics.cn",
    "lizepeng@genomics.cn",
]

repository = "https://gitlab.genomics.cn/biointelligence/implab/stero-rnd/cellbin/algorithms/cellbin"
homepage = ""

# README file(s) are used as the package description
readme = ["README.md"]

# Keywords (translated to tags on the package index)
keywords = ["packaging", "poetry"]

[tool.poetry.dependencies]
# Compatible Python versions
python = "==3.8"
# Standard dependency with semver constraints
aiohttp = "^3.8.1"
# Dependency with extras
requests = { version = "^2.28", extras = ["security"] }
# Version-specific dependencies with prereleases allowed
tomli = { version = "^2.0.1", python = "<3.11", allow-prereleases = true }
# Optional dependencies (installed by extras)
pendulum = { version = "^2.1.2", optional = true }

# Dependency groups are supported for organizing your dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0"

# ...and can be installed only when explicitly requested
[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"

# Python-style entrypoints and scripts are easily expressed
[tool.poetry.scripts]
my-script = "test:main"
